# api/swagger.yaml
@@ -33,96 +33,6 @@ schemes:
 produces:
 - "application/json"
 paths:
-  /books:
-    get:
-      tags:
-      - "Books"
-      description: "Returns information about books at a given stack."
-      operationId: "booksGET"
-      parameters:
-      - name: "stack_id"
-        in: "query"
-        description: "Stack to list books"
-        required: true
-        type: "integer"
-        format: "int32"
-      responses:
-        200:
-          description: "An array of books"
-          schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/Book"
-        default:
-          description: "Unexpected error"
-          schema:
-            $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Books"
-    post:
-      tags:
-      - "Books"
-      description: "Adds a new book to the list."
-      operationId: "booksPOST"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: "Book with default ID to be added to the list"
-        required: true
-        schema:
-          $ref: "#/definitions/Book"
-      responses:
-        200:
-          description: "OK"
-          schema:
-            type: "string"
-        405:
-          description: "Invalid input"
-      x-swagger-router-controller: "Books"
-  /books/{id}:
-    get:
-      tags:
-      - "Books"
-      description: "Returns information about the book of the specified ID."
-      operationId: "booksIdGET"
-      parameters:
-      - name: "id"
-        in: "path"
-        description: "ID of book"
-        required: true
-        type: "integer"
-        format: "int32"
-      responses:
-        200:
-          description: "A book"
-          schema:
-            $ref: "#/definitions/Book"
-        default:
-          description: "Unexpected error"
-          schema:
-            $ref: "#/definitions/Error"
-      x-swagger-router-controller: "Books"
-  /books/{id}/stack:
-    get:
-      tags:
-      - "Books"
-      - "Stacks"
-      description: "Get stack info based on book."
-      operationId: "booksIdStackGET"
-      parameters:
-      - name: "id"
-        in: "path"
-        description: "ID of book"
-        required: true
-        type: "integer"
-        format: "int32"
-      responses:
-        200:
-          description: "OK"
-          schema:
-            $ref: "#/definitions/Stack"
-        405:
-          description: "Invalid input"
-      x-swagger-router-controller: "Books"
   /stacks:
     get:
       tags:
@@ -302,17 +212,12 @@ paths:
     get:
       tags:
       - "Search"
-      description: "Search a book by its call number."
+      description: "Search a stack by a call number."
       operationId: "searchGET"
       parameters:
       - name: "keyword"
         in: "query"
         description: "Call number of search"
-        required: true
-        type: "string"
-      - name: "type"
-        in: "query"
-        description: "Type of search (Book|Class)"
         required: true
         type: "string"
       responses:
@@ -327,104 +232,7 @@ paths:
           schema:
             $ref: "#/definitions/Error"
       x-swagger-router-controller: "Search"
-  /classnumbers/{id}/stack:
-    get:
-      tags:
-      - "ClassNumbers"
-      - "Stacks"
-      description: "Get stack info based on class number."
-      operationId: "classnumbersIdStackGET"
-      parameters:
-      - name: "id"
-        in: "path"
-        description: "ID of class number"
-        required: true
-        type: "integer"
-        format: "int32"
-      responses:
-        200:
-          description: "OK"
-          schema:
-            $ref: "#/definitions/Stack"
-        405:
-          description: "Invalid input"
-      x-swagger-router-controller: "ClassNumbers"
-    put:
-      tags:
-      - "ClassNumbers"
-      - "Stacks"
-      description: "Assign a class number a stack."
-      operationId: "classnumbersIdStackPUT"
-      parameters:
-      - name: "id"
-        in: "path"
-        description: "ID of class number"
-        required: true
-        type: "integer"
-        format: "int32"
-      - name: "stack_id"
-        in: "query"
-        description: "Stack to add to the class number"
-        required: true
-        type: "integer"
-        format: "int32"
-      responses:
-        200:
-          description: "OK"
-          schema:
-            type: "string"
-        405:
-          description: "Invalid input"
-      x-swagger-router-controller: "ClassNumbers"
 definitions:
-  ClassNumber:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int32"
-        description: "Unique ID representing a class number"
-      class:
-        type: "string"
-        description: "Class of LCC"
-      subclass:
-        type: "string"
-        description: "Subclass of LCC"
-      subclass2:
-        type: "string"
-        description: "More subclass of LCC"
-      subclass3:
-        type: "string"
-        description: "More subclass of LCC"
-      subclass4:
-        type: "string"
-        description: "More subclass of LCC"
-      oversize:
-        type: "integer"
-        format: "int32"
-        description: "Size property"
-  Book:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        format: "int32"
-        description: "Unique ID representing a book"
-      ext_id:
-        type: "integer"
-        format: "int32"
-        description: "ID from external system representing a book"
-      callno:
-        type: "string"
-        description: "Call number representing a book"
-      classnumber:
-        type: "integer"
-        format: "int32"
-        description: "Class number representing a book"
-      stack:
-        type: "integer"
-        format: "int32"
-        description: "Stack located in"
   Stack:
     type: "object"
     properties:
@@ -455,6 +263,24 @@ definitions:
       geojson:
         type: "string"
         description: "Fine shape"
+      startClass:
+        type: "string"
+        description: "Start class alpha e.g. QA"
+      startSubclass:
+        type: "integer"
+        format: "int32"
+        description: "Start class number e.g. 67"
+      endClass:
+        type: "string"
+        description: "End class alpha e.g. QB"
+      endSubclass:
+        type: "integer"
+        format: "int32"
+        description: "End class number e.g. 67"
+      oversize:
+        type: "integer"
+        format: "int32"
+        description: "Size property"
       floor:
         type: "integer"
         format: "int32"
